--- a/source code/Sample_workflow.html
+++ b/source code/Sample_workflow.html
@@ -11,7 +11,7 @@
   		<div style="width:85%; display:block; margin-left:10%">
         	<p><span style="font-style: italic">Step 1.</span> Open files with "<span style="color: #F00">Files</span>"->"<span style="color: #F00">Open files</span>".<br>
 			<span style="font-style: italic">Step 2.</span> Save image with "<span style="color: #F00">Files</span>"->"<span style="color: #F00">Save image</span>".<br>
-			<span style="font-style: italic">Step 3.</span> Save date for downstream analyze with "<span style="color: #F00">Files</span>"->"<span style="color: #F00">Save data</span>".<br>
+			<span style="font-style: italic">Step 3.</span> Save data for downstream analyze with "<span style="color: #F00">Files</span>"->"<span style="color: #F00">Save data</span>".<br>
   			</p>
 		</div>
         <div style="text-align: center; font-size:large; color:#F00"><a href="index.html" style="color:#F00">More detail please see User Manuale</a></div>
